[package]
name = "kmao_decrypt"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
colored = "3.0.0"
openssl = "0.10.71"
rayon = "1.10.0"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = [
    "derive",
    "sqlite",
    "macros",
    "runtime-tokio",
] }
tokio = { version = "1.43.0", features = ["full"] }
