[workspace]
members = ["crates/kmao_decrypt", "crates/kmao_decrypt_bin"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["YinMo19 <me@YinMo19.top>"]
edition = "2024"

description = "QiMao Novel encrypt file dump."
homepage = "https://github.com/YinMo19/kmao_decrypt"
documentation = "https://docs.rs/kmao_decrypt"
repository = "https://github.com/YinMo19/kmao_decrypt"
license = "MIT"
readme = "README.md"
keywords = ["AES", "CBC", "base64", "Kmao", "QiMao"]

[workspace.dependencies]
kmao_decrypt = { path = "crates/kmao_decrypt", version = "0.2.0"}
tokio = { version = "1.43.0", features = ["full"] }
openssl ={ version = "0.10.38", features = ["vendored"] }

[profile.release]
lto = true
opt-level = "s"
strip = true
