[package]
name = "kmao_decrypt"
version = "0.1.0"
edition = "2024"
authors = ["YinMo19 <me@yinmo19.top>"]

[dependencies]
base64 = "0.22.1"
colored = "3.0.0"
rayon = "1.10.0"
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = [
    "derive",
    "sqlite",
    "macros",
    "runtime-tokio",
] }
tokio = { workspace = true}
openssl ={ workspace = true}
