[package]
name = "kmao_decrypt"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

description = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
exclude = [
    ".editorconfig",
    ".github/**/*",
    "res/*",
    "examples/*",
    "*.ncm"
]

[dependencies]
base64 = "0.22.1"
colored = "3.0.0"
rayon = "1.10.0"
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = [
    "derive",
    "sqlite",
    "macros",
    "runtime-tokio",
] }
tokio = { workspace = true}
openssl ={ workspace = true}
