[package]
name = "kmao_decrypt_bin"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

description = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
exclude = [
    ".editorconfig",
    ".github/**/*",
    "res/*",
    "examples/*",
    "*.ncm"
]

[dependencies]
kmao_decrypt = { workspace = true }
tokio = { workspace = true }
openssl = { workspace = true }
